--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-numpy~=1.23.4
-opencv-python~=4.6.0.66
-tensorflow~=2.10.0
-Flask~=2.2.2
-matplotlib~=3.6.1
+numpy
+opencv-python
+tensorflow
+Flask
+flask_cors
+matplotlib
+tensorflow-hub
