--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-numpy
+numpy~=1.23.4
 opencv-python==4.5.5.64
-tensorflow
-Flask
+tensorflow~=2.10.0
+Flask~=2.2.2
 flask_cors
-matplotlib
+matplotlib~=3.6.1
 tensorflow-hub
+onnx~=1.12.0
+onnxruntime~=1.13.1
